<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:text="@string/this_is_main_activity"
        android:textColor="@color/colorYellow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOpenChildActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/open_child_activity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnLearnBundle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/learn_bundle"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnIntentResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/intent_result"
        android:textAllCaps="false" />

</LinearLayout>